# -*- makefile -*-
#
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2007 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2014 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2014-2018 Los Alamos National Security, LLC. All rights
#                         reserved.
# Copyright (c) 2019      Intel, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from
# src/Makefile.am

# Source code files
headers += \
        class/prrte_bitmap.h \
        class/prrte_hash_table.h \
        class/prrte_hotel.h \
        class/prrte_tree.h \
        class/prrte_list.h \
        class/prrte_object.h \
        class/prrte_graph.h\
        class/prrte_lifo.h \
        class/prrte_fifo.h \
        class/prrte_pointer_array.h \
        class/prrte_value_array.h \
        class/prrte_ring_buffer.h

libprrte_la_SOURCES += \
        class/prrte_bitmap.c \
        class/prrte_hash_table.c \
        class/prrte_hotel.c \
        class/prrte_tree.c \
        class/prrte_list.c \
        class/prrte_object.c \
        class/prrte_graph.c\
        class/prrte_lifo.c \
        class/prrte_fifo.c \
        class/prrte_pointer_array.c \
        class/prrte_value_array.c \
        class/prrte_ring_buffer.c
