# -*- makefile -*-
#
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2007 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2014-2020 Cisco Systems, Inc.  All rights reserved
# Copyright (c) 2014-2018 Los Alamos National Security, LLC. All rights
#                         reserved.
# Copyright (c) 2019-2020 Intel, Inc.  All rights reserved.
# Copyright (c) 2021      Nanook Consulting.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from
# src/Makefile.am

# Source code files
headers += \
        class/prte_bitmap.h \
        class/prte_hash_table.h \
        class/prte_hotel.h \
        class/prte_list.h \
        class/prte_object.h \
        class/prte_pointer_array.h \
        class/prte_value_array.h \
        class/prte_ring_buffer.h

libprrte_la_SOURCES += \
        class/prte_bitmap.c \
        class/prte_hash_table.c \
        class/prte_hotel.c \
        class/prte_list.c \
        class/prte_object.c \
        class/prte_pointer_array.c \
        class/prte_value_array.c \
        class/prte_ring_buffer.c
