#
# Copyright (c) 2022-2023 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2023      Jeffrey M. Squyres.  All rights reserved.
# Copyright (c) 2023-2024 Nanook Consulting  All rights reserved.
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

dist_prtedata_DATA = \
        show-help-files/help-cli.txt \
        show-help-files/help-dash-host.txt \
        show-help-files/help-errmgr-base.txt \
        show-help-files/help-ess-base.txt \
        show-help-files/help-hostfile.txt \
        show-help-files/help-iof-base.txt \
        show-help-files/help-oob-base.txt \
        show-help-files/help-oob-tcp.txt \
        show-help-files/help-plm-base.txt \
        show-help-files/help-plm-slurm.txt \
        show-help-files/help-plm-ssh.txt \
        show-help-files/help-prte-filem-raw.txt \
        show-help-files/help-prte-hwloc-base.txt \
        show-help-files/help-prte-info.txt \
        show-help-files/help-prte-odls-base.txt \
        show-help-files/help-prte-odls-default.txt \
        show-help-files/help-prte-rmaps-base.txt \
        show-help-files/help-prte-rmaps-ppr.txt \
        show-help-files/help-prte-rmaps-seq.txt \
        show-help-files/help-prte-runtime.txt \
        show-help-files/help-prte-util.txt \
        show-help-files/help-prte.txt \
        show-help-files/help-prted.txt \
        show-help-files/help-prterun.txt \
        show-help-files/help-prun.txt \
        show-help-files/help-psched.txt \
        show-help-files/help-pterm.txt \
        show-help-files/help-ras-base.txt \
        show-help-files/help-ras-pbs.txt \
        show-help-files/help-ras-simulator.txt \
        show-help-files/help-ras-slurm.txt \
        show-help-files/help-rmaps_rank_file.txt \
        show-help-files/help-schizo-base.txt \
        show-help-files/help-schizo-ompi.txt \
        show-help-files/help-state-base.txt



SUBDIRS = \
        prrte-rst-content
