#
# Copyright (c) 2011-2012 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2015-2019 Intel, Inc.  All rights reserved.
# Copyright (c) 2018      Research Organization for Information Science
#                         and Technology (RIST).  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

dist_prrtedata_DATA += hwloc/help-prrte-hwloc-base.txt

headers += \
        hwloc/hwloc-internal.h

libprrte_la_SOURCES += \
        hwloc/hwloc.c \
        hwloc/hwloc_base_dt.c \
        hwloc/hwloc_base_util.c \
        hwloc/hwloc_base_maffinity.c
