#
# Copyright (c) 2011-2020 Cisco Systems, Inc.  All rights reserved
# Copyright (c) 2015-2020 Intel, Inc.  All rights reserved.
# Copyright (c) 2018      Research Organization for Information Science
#                         and Technology (RIST).  All rights reserved.
# Copyright (c) 2021      Nanook Consulting.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

dist_prtedata_DATA += hwloc/help-prte-hwloc-base.txt

headers += \
        hwloc/hwloc-internal.h

libprrte_la_SOURCES += \
        hwloc/hwloc.c \
        hwloc/hwloc_base_util.c \
        hwloc/hwloc_base_maffinity.c
