# $COPYRIGHT$
# Additional copyrights may follow
# $HEADER$

# Shared synthetic hwloc topologies used to exercise map/rank/bind
# patterns without a live DVM.  These XML files are consumed both by the
# rmaps C unit tests (test/unit/rmaps) and by the offline mapping test
# harness (test/offline), which auto-discovers every *.xml placed here.
# See the "Testing the mapper without launching" section in AGENTS.md.

EXTRA_DIST = test-topo.xml
